--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "A MEVN Posts Application",
   "main": "index.js",
   "scripts": {
-    "start": "./node_modules/nodemon/bin/nodemon.js src/app.js",
+    "start": "./node_modules/nodemon/bin/nodemon.js bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,6 +14,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^5.6.4",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1"
   }
